fix(Checkbox): fix alignment (#1493)

--- a/packages/components/src/components/CheckboxButton/CheckboxButton.module.scss
+++ b/packages/components/src/components/CheckboxButton/CheckboxButton.module.scss
@@ -7,6 +7,7 @@
   grid-template-areas: "icon label";
   grid-template-columns: auto 1fr;
   width: fit-content;
+  align-self: start;
 
   @include formControl.formControl();
 
